<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LineUp Meet</string>
    <string name="label_all_peers">All Peer(s)</string>
    <string name="title_section1"> Audio Call </string>
    <string name="title_section2"> Video Call </string>
    <string name="title_section3"> Chat </string>
    <string name="title_section4"> File Transfer </string>
    <string name="title_section5"> Data Transfer </string>
    <string name="title_section6"> Conference </string>
    <string name="action_configuration"> Configuration </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_build_info">Build information</string>
    <string name="enter_room_name">Enter Room Name</string>
    <string name="enter_room">Unirse a sala</string>
    <string name="send_data_peer">Send Data</string>
    <string name="send_data_room">Send Data [Group]</string>
    <string name="no_peer">No Peer in the room.</string>
    <string name="data_transfer_status">Transfer %1$s bytes for Private and %2$s bytes for Group.</string>
    <string name="data_transfer_received_expected">Received data %s bytes</string>
    <string name="data_transfer_received_unexpected">Warning! Received %s bytes not from the Skylink Android sample app!</string>
    <string name="peer_count">Peer count is %d</string>

    <string name="mute_audio">Mute Audio</string>
    <string name="muted_audio">Muted Audio</string>
    <string name="enable_audio">Enable Audio</string>
    <string name="enabled_audio">Enabled Audio</string>

    <string name="mute_video">Mute Video</string>
    <string name="muted_video">Muted Video</string>
    <string name="enable_video">Enable Video</string>
    <string name="enabled_video">Enabled Video</string>

    <string name="toggle_camera">Toggle Camera</string>
    <string name="disconnect">Disconnect</string>

    <string name="warn_no_peer_message">There is no peer in the room to send a message to.</string>
    <string name="warn_no_sel_message">You have not selected a Peer to send a message to.</string>
    <string name="restart_all_ice">Restart all (ICE)</string>
    <string name="restart_ice">Restart (ICE)</string>
    <string name="restart_all">Restart all</string>
    <string name="restart">Restart</string>
    <string name="recording_stop">Recording stop</string>
    <string name="recording_start">Recording start</string>
    <string name="transfer_speed">Transfer speed</string>
    <string name="webrtc_stats">WebRTC Stats</string>

</resources>
