<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/ll_video_call"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.21" />

    <TextView
        android:id="@+id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please enter the ID you have received via SMS to start your VideoCall" />

    <EditText
        android:id="@+id/et_room_name"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_room_name"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/btn_enter_room"
        android:layout_marginTop="160dp"
        android:background="@drawable/green_button_call_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"/>



    <LinearLayout
        android:id="@+id/ll_self_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toggle_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mute_audio"
            android:visibility="gone"/>

        <Button
            android:id="@+id/toggle_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mute_video"
            android:visibility="gone"/>

        <Button
            android:id="@+id/toggle_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/toggle_camera"
            android:visibility="gone"/>

        <Button
            android:id="@+id/disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect"
            android:visibility="gone"/>

    </LinearLayout>


</LinearLayout>